// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render menu-item styled components BackgroundImageContainer styled-component should render BackgroundImageContainer without props 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  background-position: center;
  background-size: cover;
  background-image: url(undefined);
}

<div
  className="c0"
/>
`;

exports[`should render menu-item styled components BackgroundImageContainer styled-component with imageUrl prop should render BackgroundImage with imageUrl prop 1`] = `
.c0 {
  width: 100%;
  height: 100%;
  background-position: center;
  background-size: cover;
  background-image: url(http://example.com/testimage.jpeg);
}

<div
  className="c0"
/>
`;

exports[`should render menu-item styled components MenuItemContainer styled-component should render MenuItemContainer without props 1`] = `
.c0 {
  height: 24rem;
  min-width: 30%;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid black;
  margin: 0 0.75rem 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .background-image {
  -webkit-transform: scale(1.11);
  -ms-transform: scale(1.11);
  transform: scale(1.11);
  -webkit-transition: -webkit-transform 6.4s cubic-bezier(0.1,0.26,0.41,0.87) 38ms;
  -webkit-transition: transform 6.4s cubic-bezier(0.1,0.26,0.41,0.87) 38ms;
  transition: transform 6.4s cubic-bezier(0.1,0.26,0.41,0.87) 38ms;
}

.c0:hover .content {
  opacity: 0.7;
}

.c0:first-child {
  margin-right: 0.75rem;
}

.c0:last-child {
  margin-left: 0.75rem;
}

@media screen and (max-width:55rem) {
  .c0 {
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    height: 20rem;
    margin: 0;
    width: 100%;
  }
}

@media screen and (max-width:30rem) {
  .c0 {
    margin: 0;
  }
}

<div
  className="c0"
/>
`;

exports[`should render menu-item styled components MenuItemContainer styled-component with size prop should render MenuItemContainer with size prop 1`] = `
.c0 {
  height: 38rem;
  min-width: 30%;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid black;
  margin: 0 0.75rem 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .background-image {
  -webkit-transform: scale(1.11);
  -ms-transform: scale(1.11);
  transform: scale(1.11);
  -webkit-transition: -webkit-transform 6.4s cubic-bezier(0.1,0.26,0.41,0.87) 38ms;
  -webkit-transition: transform 6.4s cubic-bezier(0.1,0.26,0.41,0.87) 38ms;
  transition: transform 6.4s cubic-bezier(0.1,0.26,0.41,0.87) 38ms;
}

.c0:hover .content {
  opacity: 0.7;
}

.c0:first-child {
  margin-right: 0.75rem;
}

.c0:last-child {
  margin-left: 0.75rem;
}

@media screen and (max-width:55rem) {
  .c0 {
    -webkit-flex: 1 1 100%;
    -ms-flex: 1 1 100%;
    flex: 1 1 100%;
    height: 26rem;
    margin: 0;
    width: 100%;
  }
}

@media screen and (max-width:30rem) {
  .c0 {
    margin: 0;
  }
}

<div
  className="c0"
  size={true}
/>
`;
